# FortiCfgParser

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: pylint.yml  utests.yml
FortiCfgParser/: __init__.py  _config.py  _parser.py
tests/: __init__.py  test_config.py  test_lexer.py  test_parser.py
